--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,9 +1,9 @@
 *{-webkit-tap-highlight-color: rgba(0,0,0,0);margin: 0;padding: 0;}
 
-body{font:1em/1.618 "Roboto", sans-serif;-webkit-touch-callout: none;-webkit-text-size-adjust: none;-webkit-user-select: none;color:#fff;background: #222;}
+body{font:1em/1.618 "Roboto Regular", sans-serif;-webkit-touch-callout: none;-webkit-text-size-adjust: none;-webkit-user-select: none;color:#fff;background: #333 url(bg.png) no-repeat center;background-size:contain;}
 
-h1,h2,h3{font-weight: 100;text-align: center;}
+h1,h2,h3{font-family:"Roboto Thin", sans-serif;font-weight: 100;text-align: center;}
 
-.button{line-height: 1;display: block;height: 3em;text-align: center;color:#fff;background:#a00;border-radius:3px;line-height: 3em;text-decoration: none;position: absolute;bottom: 1em;left: 1em;right: 1em;}
+.button{line-height: 1;display: block;height: 3em;text-align: center;color:#fff;background:#f80;border-radius:3px;line-height: 3em;text-decoration: none;position: absolute;bottom: 1em;left: 1em;right: 1em;}
 
 .p{padding: 1em;}
