--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,6 +1,6 @@
 *{-webkit-tap-highlight-color: rgba(0,0,0,0);margin: 0;padding: 0;}
 
-body{font:1.2em/1.618 "Roboto Regular", sans-serif;-webkit-touch-callout: none;-webkit-text-size-adjust: none;-webkit-user-select: none;color:#fff;background: #333 url(bg.png) no-repeat top center;background-size:contain;}
+body{font:1.2em/1.618 "Roboto Regular", sans-serif;-webkit-touch-callout: none;-webkit-text-size-adjust: none;-webkit-user-select: none;color:#fff;background: #333 url(bg.png) no-repeat top center;}
 
 h1{;text-align: center;}
 h1,h2,h3{font-family:"Roboto Thin", sans-serif;font-weight: 100;line-height: 1;}
