--- a/www/css/index.css
+++ b/www/css/index.css
@@ -8,6 +8,6 @@ h1,h2,h3{font-family:"Roboto Thin", sans-serif;font-weight: 100;line-height: 1;}
 .data{display: none;}
 .data-title{padding-top: 1em;}
 
-.button{line-height: 1;display: block;height: 3em;text-align: center;color:#fff;background:#f80;border-radius:3px;line-height: 3em;text-decoration: none;position: absolute;bottom: 1em;left: 1em;right: 1em;}
+.button{line-height: 1;display: block;height: 3em;text-align: center;color:#fff;background:#f80;border-radius:3px;line-height: 3em;text-decoration: none;position: absolute;bottom: 1em;left: 1em;right: 1em;text-shadow:rgba(0,0,0,.1) 0 0 1px, rgba(0,0,0,.1) 0 1px 3px;text-shadow:rgba(0,0,0,.1) 0 -1px 0;}
 
 .p{padding: 1em;}
