--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,13 +1,25 @@
-*{-webkit-tap-highlight-color: rgba(0,0,0,0);margin: 0;padding: 0;}
+*{-webkit-tap-highlight-color: rgba(0,0,0,0);margin: 0;padding: 0}
 
-body{font:1.2em/1.618 "Roboto Regular", sans-serif;-webkit-touch-callout: none;-webkit-text-size-adjust: none;-webkit-user-select: none;color:#fff;background: #333 url(bg.png) no-repeat top center;}
+html,body{height: 100%;width: 100%}
 
-h1{;text-align: center;}
-h1,h2,h3{font-family:"Roboto Thin", sans-serif;font-weight: 100;line-height: 1;}
+body{font:1.2em/1.618 "Roboto", sans-serif;-webkit-touch-callout: none;-webkit-text-size-adjust: none;-webkit-user-select: none;color:#fff;background: #333 url(bg.png) no-repeat center}
+.help{display: none}
 
-.data{display: none;}
-.data-title{padding-top: 1em;}
+h1{text-align: center}
+h1,h2,h3{font-family:"Roboto", sans-serif;font-weight: 100;line-height: 1}
 
-.button{line-height: 1;display: block;height: 3em;text-align: center;color:#fff;background:#f80;border-radius:3px;line-height: 3em;text-decoration: none;position: absolute;bottom: 1em;left: 1em;right: 1em;text-shadow:rgba(0,0,0,.1) 0 0 1px, rgba(0,0,0,.1) 0 1px 3px;text-shadow:rgba(0,0,0,.1) 0 -1px 0;}
+.data{display: none}
+.data-title{padding-top: 1em}
 
-.p{padding: 1em;}
+.button{line-height: 1;display: block;height: 3em;text-align: center;color:#fff;background:#e70;border-radius:3px;line-height: 3em;text-decoration: none;position: absolute;bottom: 1em;left: 1em;right: 1em;text-shadow:rgba(0,0,0,.2) 0 0 1px, rgba(0,0,0,.2) 0 1px 5px;text-shadow:rgba(0,0,0,.2) 0 -2px 0}
+.button:hover, .button:active{background:#f40}
+
+.error{display: none}
+
+.p{padding: 1em}
+
+body.start .help{display: block !important}
+
+body.succes .data{display:block !important}
+
+body.error .error{display: block !important}
