--- a/www/css/index.css
+++ b/www/css/index.css
@@ -2,7 +2,7 @@
 
 html,body{height: 100%;width: 100%}
 
-body{font:1.2em/1.618 "Roboto", sans-serif;-webkit-touch-callout: none;-webkit-text-size-adjust: none;-webkit-user-select: none;color:#fff;background: #333 url(bg.png) no-repeat center}
+body{font:1em/1.618 "Roboto", sans-serif;-webkit-touch-callout: none;-webkit-text-size-adjust: none;-webkit-user-select: none;color:#fff;background: #333 url(bg.png) no-repeat center}
 .help{display: none}
 
 h1{text-align: center}
@@ -11,15 +11,19 @@ h1,h2,h3{font-family:"Roboto", sans-serif;font-weight: 100;line-height: 1}
 .data{display: none}
 .data-title{padding-top: 1em}
 
-.button{line-height: 1;display: block;height: 3em;text-align: center;color:#fff;background:#e70;border-radius:3px;line-height: 3em;text-decoration: none;position: absolute;bottom: 1em;left: 1em;right: 1em;text-shadow:rgba(0,0,0,.2) 0 0 1px, rgba(0,0,0,.2) 0 1px 5px;text-shadow:rgba(0,0,0,.2) 0 -2px 0}
-.button:hover, .button:active{background:#f40}
+.button{line-height: 1;display: block;height: 3em;text-align: center;color:#fff;border-radius:3px;line-height: 3em;text-decoration: none;position: absolute;bottom: 1em;left: 1em;right: 1em;text-shadow:rgba(0,0,0,.2) 0 0 1px, rgba(0,0,0,.2) 0 1px 5px;text-shadow:rgba(0,0,0,.2) 0 -2px 0}
+.email{border:2px solid #555;background:rgba(51,51,51,.9);display: none;}
+.start{background:#e70;}
+.start:hover, .start:active{background:#f40}
 
-.error{display: none}
+.error-msj{display: none}
 
 .p{padding: 1em}
 
-body.start .help{display: block !important}
+body.init .help{display: block !important}
 
-body.succes .data{display:block !important}
+body.success .data{display:block !important}
+body.success .button{margin:1em 0;position: relative;top: 0;left: 0;right: 0;bottom: 0;}
+body.success .email{display: block !important;}
 
-body.error .error{display: block !important}
+body.error .error-msj{display: block !important}
